migration-result/ver/13.x/database-access/guides.mdx
---
title: Database Access Guides
description: Guides for configuring Teleport database access with self-hosted or cloud-hosted databases.
layout: tocless-doc
version: '13.x'
---

## How to connect your database to Teleport

- [Active Directory SQL Server](/ver/13.x/database-access/guides/sql-server-ad): Connect Microsoft SQL Server with Active Directory authentication.
- [Active Directory SQL Server with PKINIT](/ver/13.x/database-access/guides/sql-server-ad-pkinit): Connect Microsoft SQL Server with Active Directory PKINIT authentication.
- [AWS DynamoDB](/ver/13.x/database-access/guides/aws-dynamodb): Connect AWS DynamoDB.
- [AWS OpenSearch](/ver/13.x/database-access/guides/aws-opensearch): Connect AWS OpenSearch.
- [AWS ElastiCache & MemoryDB](/ver/13.x/database-access/guides/redis-aws): Connect AWS ElastiCache or AWS MemoryDB for Redis database.
- [AWS RDS & Aurora](/ver/13.x/database-access/guides/rds): Connect AWS RDS or Aurora PostgreSQL, MariaDB or MySQL database.
- [AWS RDS Proxy](/ver/13.x/database-access/guides/rds-proxy): Connect AWS RDS Proxy instances to Teleport.
- [AWS Redshift](/ver/13.x/database-access/guides/postgres-redshift): Connect AWS Redshift database.
- [AWS Redshift Serverless](/ver/13.x/database-access/guides/redshift-serverless): Connect to AWS Redshift serverless.
- [AWS Keyspaces (Apache Cassandra)](/ver/13.x/database-access/guides/aws-cassandra-keyspaces): Connect to an AWS Keyspaces database.
- [Azure PostgreSQL & MySQL](/ver/13.x/database-access/guides/azure-postgres-mysql): Connect Azure PostgreSQL or MySQL.
- [Azure Cache for Redis](/ver/13.x/database-access/guides/azure-redis): Connect Azure Cache for Redis.
- [Azure SQL Server](/ver/13.x/database-access/guides/azure-sql-server-ad): Connect Azure SQL Server with Azure Active Directory authentication.
- [GCP Cloud SQL MySQL](/ver/13.x/database-access/guides/mysql-cloudsql): Connect GCP Cloud SQL MySQL database.
- [GCP Cloud SQL PostgreSQL](/ver/13.x/database-access/guides/postgres-cloudsql): Connect GCP Cloud SQL PostgreSQL database.
- [MongoDB Atlas](/ver/13.x/database-access/guides/mongodb-atlas): Connect MongoDB Atlas cluster.
- [Self-hosted CockroachDB](/ver/13.x/database-access/guides/cockroachdb-self-hosted): Connect self-hosted CockroachDB database.
- [Self-hosted Elasticsearch](/ver/13.x/database-access/guides/elastic)
- [Self-hosted MongoDB](/ver/13.x/database-access/guides/mongodb-self-hosted): Connect self-hosted MongoDB database.
- [Self-hosted MySQL & MariaDB](/ver/13.x/database-access/guides/mysql-self-hosted): Connect self-hosted MySQL or MariaDB database.
- [Self-hosted PostgreSQL](/ver/13.x/database-access/guides/postgres-self-hosted): Connect self-hosted PostgreSQL database.
- [Self-hosted Redis Cluster](/ver/13.x/database-access/guides/redis-cluster): Connect a self-hosted Redis Cluster.
- [Self-hosted Redis](/ver/13.x/database-access/guides/redis): Connect self-hosted Redis.
- [Self-Hosted Cassandra & ScyllaDB](/ver/13.x/database-access/guides/cassandra-self-hosted): Connect self-hosted Cassandra or ScyllaDB.
- [Self-Hosted Oracle](/ver/13.x/database-access/guides/oracle-self-hosted): Connect self-hosted Oracle database.
- [Snowflake](/ver/13.x/database-access/guides/snowflake): Connect Snowflake.

## Other guides

- [GUI clients](/ver/13.x/connect-your-client/gui-clients): Configure database graphical clients.
- [Dynamic Registration](/ver/13.x/database-access/guides/dynamic-registration): Register/unregister databases without restarting Teleport.
- [High Availability](/ver/13.x/database-access/guides/ha): Deploy database access in HA configuration.
- [AWS Cross-Account Access](/ver/13.x/database-access/guides/aws-cross-account): Connect AWS databases in external AWS accounts.
